# menu

menu_library/: LICENSE  README.md  pyproject.toml
menu_library/src/dog_inp/: __init__.py  menu.py
menu_library/src/dog_inp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
